
- Fix https://github.com/spockframework/spock/issues/1229[#1229] `@TempDir` not working for inherited fields

- Fix https://github.com/spockframework/spock/issues/1232[#1232] compile error for nested conditions without top-level condition

- Fix https://github.com/spockframework/spock/issues/1256[#1256] handling of `is` as getter for boolean properties on Mocks

- Fix `ErrorSpecNode` to re-throw `Exception` in `prepare` instead of `execute`,
  this fixes an issue that interceptors for `prepare`, `before`, and `around`
  were still executed and any Exception they throw would hide the actual cause.

- Fix https://github.com/spockframework/spock/issues/1263[#1263] ExceptionAdapterExtension to also handle inherited fixture methods

- Fix https://github.com/spockframework/spock/issues/1279[#1279] Cast data variables with type coercion to the declared parameter type

Thanks to all the contributors to this release: Marcin Erdmann, Björn Kautler, Alexander Kriegisch, Josh Soref, Vaidotas Valuckas


== 2.0-M4 (2020-11-01)

- *Added <<parallel_execution.adoc#parallel-execution,Parallel Execution>> support*

- Add a way to register `ConfigurationObject` globally without the need for a global extension.

- Annotations for local extensions can now be defined as `@Repeatable` and applied multiple times to the same target.
  Spock will handle this appropriately and call the extensions `visitSpecAnnotations` method with all annotations.
  If these methods are not overwritten, they forward to the usual `visitSpecAnnotation` methods once for each annotation.

- `@ConfineMetaClassChanges`, `@Issue`, `@IgnoreIf`, `@PendingFeatureIf`, `@Requires`, `@See`, `@Subject`, `@Use`, and `@UseModules` are now repeatable annotations

- `@Requires`, `@IgnoreIf` and `@PendingFeatureIf` can now access instance fields, shared fields and instance methods
  by using the `instance.` qualifier inside the condition closure.
